  - prepend: optimize recalculation of element index ?
  - add stream like read/write buffer ?
  - add libfdata_list_set_element_by_index_with_mapped_size
  - add libfdata_list_prepend_element_with_mapped_size
  - add libfdata_list_set_element_at_offset
  - write on set value ? what about create ?
  - add calculate_cache_entry_index support
* range list
  - work in progress
* reference and buffer reference
  - refactor
* stream
  - add mapped offset support ?
* tree
  - refactor
* tree node
  - refactor
* vector
  - refactor
  - write on set value ? what about create ?

Optimizations:
* mapped ranges
  - optimize calculations by adding flag to mapped range ?
    LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID

20130616
* worked on reference

20130501
* worked on vector

20130427
* worked on vector

20130424
* worked on vector

20130422
* worked on vector

20130420
* fix for stream size calculation

20130411
* worked on range list

20130410
* worked on range list

20130409
* worked on range list
* optimized and fixed append list

20130408
* worked on range list
* list initial work on calculate_cache_entry_index callback

20130407
* worked on refactor to combine fdata and mfdata
* worked on range list

20130406
* worked on refactor to combine fdata and mfdata
* worked on range list

20130405
* worked on refactor to combine fdata and mfdata

20130404
* updated dependencies
* fixes for local library Makefiles
* worked on refactor to combine fdata and mfdata
* updated include header and man page

20130403
* worked on refactor to combine fdata and mfdata
* worked on list
* worked on stream

20130402
* worked on refactor to combine fdata and mfdata
* worked on list
* worked on stream

20130401
* worked on refactor to combine fdata and mfdata
* stream rewrite
  - removed list
  - removed caching
  - removed segment data functions
  - added write support

20130320
* worked on refactor to combine fdata and mfdata
* worked on stream
* removed stream reference

20130319