@@ -30,6 +30,7 @@ Types:
   - add libfdata_list_set_element_at_offset
   - write on set value ? what about create ?
   - add calculate_cache_entry_index support
+  - implement libfdata_list_read_buffer and libfdata_list_seek_offset ?
 * range list
   - work in progress
 * reference and buffer reference
@@ -48,6 +49,9 @@ Optimizations:
 * mapped ranges
   - optimize calculations by adding flag to mapped range ?
     LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID
+
+20130718
+* remove unnecessary restriction in library include headers
 
 20130616
 * worked on reference
